# SignNet-1M

./: .gitignore  README.md  pyproject.toml
configs/: signnet_augmentation.yaml
scripts/: plan_augmentation.py  run_post_rendering.py  run_render_backend.py
signnet/: __init__.py
signnet/augmentation/: __init__.py  camera.py  metadata.py  post_rendering.py  render_pipeline.py
signnet/evaluation/: __init__.py  check_release_metadata.py
