[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "signnet-codebase"
version = "0.1.0"
description = "Reference augmentation code for SignNet-1M."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "opencv-python>=4.8",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["signnet*"]
